[WIP]change API
