# backend/pkg/hobbyapi/v1/handler.go
@@ -2,44 +2,12 @@ package hobbyapi
 
 import (
 	"encoding/json"
-	"fmt"
 	"net/http"
-	"os"
-	"strconv"
 	"time"
 
-	"github.com/gorilla/mux"
 	"github.com/sh-miyoshi/doraku/pkg/hobbydb"
 	"github.com/sh-miyoshi/doraku/pkg/logger"
 )
-
-// GetAllHobbyHandler return lists of hobbies
-func GetAllHobbyHandler(w http.ResponseWriter, r *http.Request) {
-	logger.Info("call GetAllHobbyHandler method")
-
-	var res []HobbyKey
-
-	for _, h := range hobbydb.GetInst().GetAllHobby() {
-		tmp := HobbyKey{
-			ID:   h.ID,
-			Name: h.Name,
-		}
-		res = append(res, tmp)
-	}
-	logger.Debug("Hobby Data: %v", res)
-
-	resRaw, err := json.Marshal(res)
-	if err != nil {
-		logger.Error("Failed to marshal hobby lists %v", err)
-		http.Error(w, "Internal Server Error", http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
-	w.WriteHeader(http.StatusOK)
-	w.Write(resRaw)
-	logger.Info("Successfully finished GetAllHobbyHandler")
-}
 
 // GetTodayHobbyHandler return a hobby determined by date
 func GetTodayHobbyHandler(w http.ResponseWriter, r *http.Request) {
@@ -64,7 +32,7 @@ func GetTodayHobbyHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	res := HobbyKey{
+	res := HobbyInfo{
 		ID:   hobby.ID,
 		Name: hobby.Name,
 	}
@@ -82,24 +50,22 @@ func GetTodayHobbyHandler(w http.ResponseWriter, r *http.Request) {
 	logger.Info("Successfully finished GetTodayHobbyHandler")
 }
 
-// GetRecommendedHobbyHandler return a hobby determined by input value
-func GetRecommendedHobbyHandler(w http.ResponseWriter, r *http.Request) {
-	logger.Info("call GetRecommendedHobbyHandler method")
+// GetRecommendHobbyHandler return a hobby determined by input value
+func GetRecommendHobbyHandler(w http.ResponseWriter, r *http.Request) {
+	logger.Info("call GetRecommendHobbyHandler method")
 
-	logger.Debug("query value outdoor: %s", r.FormValue("outdoor"))
-	logger.Debug("query value alone: %s", r.FormValue("alone"))
-	logger.Debug("query value active: %s", r.FormValue("active"))
-
-	// if query == yes then, set var = true
-	outdoor := (r.FormValue("outdoor") == "yes")
-	alone := (r.FormValue("alone") == "yes")
-	active := (r.FormValue("active") == "yes")
+	var req RecommendRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		logger.Info("Failed to decode request %v", err)
+		http.Error(w, "Bad Request", http.StatusBadRequest)
+		return
+	}
 
 	// GetRecommended Hobby
 	input := hobbydb.InputValue{
-		Outdoor: outdoor,
-		Alone:   alone,
-		Active:  active,
+		Outdoor: req.Outdoor,
+		Alone:   req.Alone,
+		Active:  req.Active,
 	}
 	hobby, err := hobbydb.GetInst().GetRecommendedHobby(input)
 	if err != nil {
@@ -108,7 +74,7 @@ func GetRecommendedHobbyHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	res := HobbyKey{
+	res := HobbyInfo{
 		ID:   hobby.ID,
 		Name: hobby.Name,
 	}
@@ -124,73 +90,4 @@ func GetRecommendedHobbyHandler(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 	w.Write(resRaw)
 	logger.Info("Successfully finished GetRecommendedHobbyHandler")
-}
-
-// GetHobbyDetailsHandler return the details of input hobby
-func GetHobbyDetailsHandler(w http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-	id, err := strconv.Atoi(vars["id"])
-	if err != nil {
-		logger.Info("Failed to get hobby %v", err)
-		http.Error(w, "No such hobby", http.StatusNotFound)
-		return
-	}
-
-	logger.Info("call GetHobbyDetailsHandler method by id: %d", id)
-
-	hobby, err := hobbydb.GetInst().GetHobbyByID(id)
-	if err != nil {
-		logger.Info("Failed to get hobby %v", err)
-		http.Error(w, "No such hobby", http.StatusNotFound)
-		return
-	}
-
-	res := Hobby{
-		ID:              hobby.ID,
-		Name:            hobby.Name,
-		NameEN:          hobby.NameEN,
-		Description:     hobby.Description,
-		DescriptionFrom: hobby.DescriptionFrom,
-		DescriptionURL:  hobby.DescriptionURL,
-	}
-
-	// TODO: set groupInfo
-
-	resRaw, err := json.Marshal(res)
-	if err != nil {
-		logger.Error("Failed to marshal hobby %v", err)
-		http.Error(w, "Internal Server Error", http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
-	w.WriteHeader(http.StatusOK)
-	w.Write(resRaw)
-	logger.Info("Successfully finished GetHobbyDetailsHandler")
-}
-
-// GetImageHandler return the image binary of hobby
-func GetImageHandler(w http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-	id, err := strconv.Atoi(vars["id"])
-	if err != nil {
-		logger.Info("Failed to get image %v", err)
-		http.Error(w, "No such hobby", http.StatusNotFound)
-		return
-	}
-
-	logger.Info("call GetImageHandler method by id: %d", id)
-
-	filename := fmt.Sprintf("database/images/%d.png", id)
-
-	// Check file exists
-	_, err = os.Stat(filename)
-	if err != nil {
-		logger.Info("Failed to get image file by id(%d) %v", id, err)
-		http.Error(w, "No such hobby", http.StatusNotFound)
-		return
-	}
-	http.ServeFile(w, r, filename)
-
-	logger.Info("Successfully finished GetImageHandler")
 }
