# backend/pkg/hobbyapi/v1/types.go
@@ -1,23 +1,22 @@
 package hobbyapi
 
 //----------------------------
+// Request Data
+//----------------------------
+
+// RecommendRequest struct is request data for recommendation
+type RecommendRequest struct {
+	Outdoor bool `json:"outdoor"`
+	Alone   bool `json:"alone"`
+	Active  bool `json:"active"`
+}
+
+//----------------------------
 // Response Data
 //----------------------------
 
-// Hobby struct defines info of hobby details
-type Hobby struct {
-	ID              int    `json:"id"`
-	Name            string `json:"name"`
-	NameEN          string `json:"nameEN"`
-	Description     string `json:"description"`
-	DescriptionFrom string `json:"descriptionFrom"`
-	DescriptionURL  string `json:"descriptionURL"`
-	GroupNo         int    `json:"groupNo"`
-	GroupInfo       string `json:"groupInfo"`
-}
-
-// HobbyKey struct only includes id and name for vitualization
-type HobbyKey struct {
+// HobbyInfo struct is return value of hobby API
+type HobbyInfo struct {
 	ID   int    `json:"id"`
 	Name string `json:"name"`
 }
