# backend/pkg/hobbydb/types.go
@@ -2,13 +2,9 @@ package hobbydb
 
 // HobbyDB is structure of Hobby
 type HobbyDB struct {
-	ID              int
-	Name            string
-	NameEN          string
-	GroupNo         int64
-	Description     string
-	DescriptionFrom string
-	DescriptionURL  string
+	ID      int
+	Name    string
+	GroupNo int64
 }
 
 // InputValue strruct defines input value for recommendation
@@ -16,4 +12,11 @@ type InputValue struct {
 	Outdoor bool
 	Alone   bool
 	Active  bool
+}
+
+// DBHandler is interface of dbHandler
+type DBHandler interface {
+	Initialize(connStr string) error
+	GetRecommedHobby(input InputValue) (HobbyDB, error)
+	GetHobbyNum() int
 }
