# backend/server.go
@@ -9,7 +9,6 @@ import (
 	"github.com/gorilla/handlers"
 	"github.com/gorilla/mux"
 	hobbyapiv1 "github.com/sh-miyoshi/doraku/pkg/hobbyapi/v1"
-	"github.com/sh-miyoshi/doraku/pkg/hobbydb"
 	"github.com/sh-miyoshi/doraku/pkg/logger"
 	userapiv1 "github.com/sh-miyoshi/doraku/pkg/userapi/v1"
 	"github.com/sh-miyoshi/doraku/pkg/userdb"
@@ -38,13 +37,7 @@ func parseCmdlineArgs() {
 }
 
 func initDataBase() {
-	const hobbyFilePath = "database/hobby.csv"
 	const descFilePath = "database/description.csv"
-
-	if err := hobbydb.GetInst().Initialize(hobbyFilePath, descFilePath); err != nil {
-		logger.Error("Failed to initialize Hobby DB: %v", err)
-		os.Exit(1)
-	}
 
 	// TODO run db in local
 	if err := userdb.InitUserHandler(userdb.DBLocal); err != nil {
@@ -62,11 +55,8 @@ func setAPI(r *mux.Router) {
 	const basePath = "/api/v1"
 
 	// Hobby API
-	r.HandleFunc(basePath+"/hobby/all", hobbyapiv1.GetAllHobbyHandler).Methods("GET")
 	r.HandleFunc(basePath+"/hobby/today", hobbyapiv1.GetTodayHobbyHandler).Methods("GET")
-	r.HandleFunc(basePath+"/hobby/recommended", hobbyapiv1.GetRecommendedHobbyHandler).Methods("GET")
-	r.HandleFunc(basePath+"/hobby/details/{id}", hobbyapiv1.GetHobbyDetailsHandler).Methods("GET")
-	r.HandleFunc(basePath+"/hobby/image/{id}", hobbyapiv1.GetImageHandler).Methods("GET")
+	r.HandleFunc(basePath+"/hobby/recommend", hobbyapiv1.GetRecommendHobbyHandler).Methods("GET")
 
 	// User API
 	// TODO(user API is not completed yet, so if enable alpha api mode, user API can be called)
